@@ -29,15 +29,15 @@ import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriInfo;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.UriInfo;
 
 import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal;
 import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversalSource;
@@ -90,7 +90,6 @@ public class CQ2GremlinTest extends RESTAPI {
     }
 
     @PUT
-    @Path("")
     @Consumes({MediaType.APPLICATION_JSON})
     @Produces({MediaType.APPLICATION_JSON})
     public Response getC2Qgremlin(@RequestBody CustomQueryTestDTO content,
@@ -161,7 +160,7 @@ public class CQ2GremlinTest extends RESTAPI {
             StringBuilder vertexIdentifier = new StringBuilder();
             List<String> keyValues = new ArrayList<>();
             keyValues.add(T.id.toString());
-            keyValues.add(String.format("%02d", verticesMap.size() * 10));
+            keyValues.add("%02d".formatted(verticesMap.size() * 10));
             AtomicInteger index = new AtomicInteger(0);
             vertex.forEach((k, v) -> {
                 if (index.get() == 1)
